@@ -8,6 +8,7 @@ aTunes 2.1.0
 - Restore selection after track deletion in playlist [3007538] (patch by cy6ergnOm)
 - Song properties dialog improved [3002167] (patch by cy6ergnOm)
 - FIX: Exception during renaming of file name
+- FIX: Problems changing Look and Feel / Theme [2998976]
 
 aTunes 2.0.2
 -------------
@@ -16,6 +17,7 @@ aTunes 2.0.2
 - FIX: Hotkeys supported for Windows 64 bits (path by Johannes Lerch)
 - FIX: Changes to fit progress bar completely at bottom of player controls panel
 - FIX: Wrong capitalization for LyricWiki [3020431]
+- FIX: Problems changing Look and Feel / Theme [2998976]
 
 aTunes 2.0.1
 -------------
